# email-gen-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
.cloude/: CLAUDE.md
.codex/skills/: SKILL.md
.github/workflows/: ci.yml
apps/api/: README.md  pyproject.toml
apps/api/src/case_assistant_api/: config.py  resilience.py
apps/api/src/case_assistant_api/agents/drafts/: __init__.py  graph.py  state.py
apps/api/src/case_assistant_api/api/: cases.py
apps/api/src/case_assistant_api/db/: __init__.py  pool.py
apps/api/src/case_assistant_api/db/migrations_sql/: 001_initial_schema.sql
apps/api/src/case_assistant_api/domains/cases/: schemas.py
apps/api/src/case_assistant_api/domains/drafts/: approval.py
apps/api/src/case_assistant_api/domains/jobs/: __init__.py  store.py
apps/api/src/case_assistant_api/domains/rag/: indexer.py
apps/api/src/case_assistant_api/evaluation/: __main__.py  run_evaluation.py  scenarios.py
apps/api/src/case_assistant_api/observability/: logging.py
apps/api/src/case_assistant_api/security/: authorization.py
apps/api/src/case_assistant_api/workers/: __init__.py  dispatch.py  retry.py
apps/api/src/case_assistant_api/workers/arq/: settings.py
apps/api/tests/: test_case_repository.py  test_db_migrations.py  test_health.py  test_redaction.py  test_resilience.py
docs/: AI_AGENT_GUIDELINES.md  README.md  SECURITY_CHECKLIST.md  SPEC.md  security.md
infra/: README.md
infra/compose/: docker-compose.yml
infra/dockerfiles/: api.Dockerfile
results/: analysis.md  report.csv  report.json
scripts/: check.sh  seed.py
src/email_assistant/: __init__.py  config.py  main.py
src/email_assistant/agents/: __init__.py  emails.py  llm.py  pipeline.py  schema.py
src/email_assistant/agents/drafts/: checkpoints.py  graph.py  prompts.py  reply_schema.py  state.py
src/email_assistant/agents/emails/: __init__.py  graph.py  prompts.py  schema.py
src/email_assistant/api/: admin.py  cases.py  emails.py  health.py
src/email_assistant/db/: __init__.py  migrations.py  pool.py
src/email_assistant/db/migrations_sql/: __init__.py
src/email_assistant/domains/cases/: __init__.py  repository.py
src/email_assistant/domains/drafts/: __init__.py  approval.py  schemas.py  service.py  validation.py
src/email_assistant/domains/health/: schemas.py  service.py
src/email_assistant/domains/jobs/: __init__.py  schemas.py  store.py
src/email_assistant/domains/masking/: __init__.py  service.py
src/email_assistant/domains/rag/: indexer.py  retriever.py  sanitization.py
src/email_assistant/evaluation/: __init__.py  __main__.py  metrics.py  run_evaluation.py  scenarios.py
src/email_assistant/observability/: logging.py  redaction.py
src/email_assistant/security/: output_guardrails.py
src/email_assistant/workers/: dispatch.py
src/email_assistant/workers/arq/: settings.py
src/email_assistant/workers/jobs/: drafts.py
tests/: conftest.py  repository_fixtures.py  test_api_reference.py  test_basic.py  test_case_repository.py  test_db_migrations.py  test_draft_graph.py  test_drafts.py  test_evidence_indexer.py  test_evidence_sanitization.py  test_evidence_validation.py  test_health.py  test_masking.py  test_redaction.py  test_resilience.py  test_retrievers.py
