[project]
name = "case-assistant"
version = "0.1.0"
description = "Email generation assistant workspace"
requires-python = ">=3.13"
dependencies = [
    "case-assistant-api[llm]",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["apps/api"]

[tool.uv.sources]
case-assistant-api = { workspace = true }

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [".venv", ".references"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
    "RUF",
    "TCH",
    "PL",
    "TID",
    "ANN",
]
ignore = [
    "ANN401",
    "PLR0913",
    "TC001",
    "TC002",
    "TC003",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["ANN", "PLR2004", "S101"]
"**/scripts/seed.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["apps/api/src", "apps/api/tests"]
exclude = ["**/__pycache__", "**/.venv", ".references"]
typeCheckingMode = "strict"
pythonVersion = "3.13"
reportMissingTypeStubs = false
reportUnknownMemberType = "none"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "warning"

[tool.pytest.ini_options]
testpaths = ["apps/api/tests"]
addopts = "-ra --strict-markers --strict-config"
