[project]
name = "case-assistant-api"
version = "0.1.0"
description = "FastAPI backend for email generation assistant"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=25.0.0",
    "httpx>=0.28.0",
    "redis>=5.2.0",
    "arq>=0.26.3",
    "asyncpg>=0.30.0",
    "opensearch-py>=2.8.0",
    "langgraph>=0.2.70",
    "langchain-google-genai>=2.0.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "psycopg[binary,pool]>=3.2.0",
    "scalar-fastapi>=1.8.2",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.70.0",
    "langchain-openai>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/case_assistant_api"]

[tool.uv]
package = true
